[JBTM-2634] Narayana Spring Boot quickstart

--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -35,6 +35,7 @@
     <url>http://jboss.org/jbosstm</url>
 
     <modules>
-      <module>jta</module>
+        <module>jta</module>
+        <module>narayana-spring-boot</module>
     </modules>
 </project>
