--- a/spring-boot/pom.xml
+++ b/spring-boot/pom.xml
@@ -85,8 +85,13 @@
 			<artifactId>jboss-transaction-api_1.1_spec</artifactId>
 			<version>${jboss.spec.javax.transaction.version}</version>
 		</dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-dbcp2</artifactId>
+            <version>2.1.1</version>
+        </dependency>
 
-	</dependencies>
+    </dependencies>
 	
 	<build>
 		<plugins>
