--- a/spring/narayana-spring-boot/pom.xml
+++ b/spring/narayana-spring-boot/pom.xml
@@ -27,16 +27,33 @@
 
     <groupId>org.jboss.narayana.quickstarts.spring</groupId>
     <artifactId>narayana-spring-boot</artifactId>
-    <version>5.3.2.Final-SNAPSHOT</version>
+    <version>5.3.3.Final-SNAPSHOT</version>
     <description>Narayana Spring Boot example</description>
 
     <properties>
         <version.org.jboss.byteman>3.0.4</version.org.jboss.byteman>
-        <version.org.springframework.boot>1.4.0.BUILD-SNAPSHOT</version.org.springframework.boot>
+        <version.org.springframework.boot>1.4.0.M2</version.org.springframework.boot>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
+  <repositories>
+    <repository>
+          <id>spring-milestone</id>
+              <name>Spring Milestone Repository</name>
+                  <url>https://repo.spring.io/milestone</url>
+                </repository>
+
+              </repositories>
+
+  <pluginRepositories>
+    <pluginRepository>
+     <id>spring-milestone</id>
+              <name>Spring Milestone Repository</name>
+                  <url>https://repo.spring.io/milestone</url>
+
+    </pluginRepository>
+    </pluginRepositories>
     <dependencyManagement>
         <dependencies>
             <dependency>
